<resources>
    <string name="app_name">Fiktion</string>
    <string name="title_activity_location">Nearby</string>
    <string name="invalid_email_error">Requires a valid email</string>
    <string name="invalid_password_error">Password must be at least 6 characters</string>
    <string name="toast_authentication_failed">Authentication Failed</string>
    <string name="gps_network_not_enabled">GPS location is not enabled.</string>
    <string name="open_location_settings">Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="add_poi_title">Add a Point of Interest</string>
    <string name="add_poi_name">ex: Akihabara</string>
    <string name="add_poi_fiction">ex: Steins;Gate</string>
    <string name="add_poi_position_wiki">From wiki link</string>
    <string name="enter_wikipedia_link">Enter a link to a Wikipedia article that contains coordinates :</string>
    <string name="wikipedia_link">Enter a Wikipedia link…</string>
    <string name="get_coordinates">Get coordinates</string>
    <string name="add">Add</string>
    <string name="choose_position_on_map">From map / you</string>
    <string name="add_description_to_point">An inspiring text describing this place (can be several lines long, don\'t be shy)…</string>
    <string name="add_point">Save this place!</string>
    <string name="default_search_radius">50</string>
    <string name="find_near_places">Find near places !</string>
    <string name="set_search_radius">Set your search Radius</string>
    <string name="use_selected_position">Use selected position</string>
    <string name="use_own_position">Use your own position</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="search">Search</string>

    <string name="request_poi_name">Please write the name of your Point of interest</string>
    <string name="invalid_characters">Those characters are not accepted: . $ # [ ] /</string>

    <!-- MainActivity -->
    <string name="singn_in_button">SignIn</string>
    <!-- ProfileSettingsActivity-->
    <string name="delete_account">Delete account</string>
    <!-- RegisterActivity -->
    <string name="confirm_pw">Confirm password</string>

    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="search_radius">Search radius</string>
    <string name="profile">Profile</string>
    <string name="verify_email">Verify e-mail</string>
    <string name="send_email">Send E-mail</string>
    <string name="vote">Vote</string>
    <string name="pictures">Pictures</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="user_reviews">User reviews</string>
    <string name="add_a_review">Add a review</string>
    <string name="nearby">Nearby</string>
    <string name="delete">Delete</string>
    <string name="notifications">Notifications</string>
    <string name="some_annoying_notifications">Some annoying notifications</string>
    <string name="profile_is_public">Profile is public</string>
    <string name="save_account_settings">Save account settings</string>
    <string name="fiktion_app_logo">Fiktion app logo</string>
    <string name="reset">Reset</string>
    <string name="user_banner">User banner</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="location_post_photo">Location post photo</string>
    <string name="user_content_picture">User content picture</string>
    <string name="search_hint">Search a place, movie, city, …</string>
    <string name="empty_search">Search field is empty</string>
    <string name="search_by_algolia">Search by Algolia</string>
    <string name="main_image_content_description">Main image</string>
    <string name="name">Name</string>
    <string name="in_fiction">Featured in</string>
    <string name="Latitude">Latitude</string>
    <string name="latitude_example">ex: 35.7022077</string>
    <string name="longitude_example">ex: 139.7722703</string>
    <string name="Longitude">Longitude</string>
    <string name="Position">Position</string>
    <string name="City">City</string>
    <string name="city_example">ex: Tokyo</string>
    <string name="Country">Country</string>
    <string name="country_example">ex: Japan</string>
    <string name="Description">Description</string>
    <string name="login">Login or register account</string>
    <string name="loading_text">Loading…</string>
    <string name="no_results_found">No results found</string>
    <string name="no_nearby_places_found">No nearby places found.</string>
    <string name="actions">actions</string>
    <string name="Favourite">Favourite</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Edit">Edit</string>
    <string name="loading_data">Loading data …</string>
    <string name="data_not_found">Data not found.</string>
    <string name="failed_to_fetch_data">Failed to fetch data.</string>
    <string name="no_reviews_yet">No reviews yet. Write some?</string>
    <string name="load_more">Load more …</string>
    <string name="background">Background</string>
    <string name="review_text_input">Write an inspired review describing this place. Can be several lines long, don\'t be shy, but please stay courteous :)</string>
    <string name="add_review">Add review</string>
    <string name="write_a_review_for_this_place">Write a review for this place</string>
    <string name="title_activity_user_places">Places</string>
    <string name="title_activity_user_pictures">Pictures</string>
    <string name="title_activity_user_achievements">Achievements</string>
    <string name="title_activity_user_friends">Friends</string>
    <string name="user_places_tab_visited">Visited</string>
    <string name="user_places_tab_wishlisted">Wishlist</string>
    <string name="user_places_tab_favourites">Favorites</string>
    <string name="no_places_yet_add_some">No places yet. Add some?</string>
    <string name="user_not_found">User not found</string>
    <string name="profile_action">Profile action</string>
    <string name="friends_requests">Friends requests</string>
    <string name="friends_list">Friends list</string>
    <string name="no_friends_yet_add_some">No friends yet. Add some?</string>
    <string name="places_visited_by">Places visited by  %s</string>
    <string name="places_in_wishlist">Places in %s \'s wishlist</string>
    <string name="places_in_favorites">Places in %s \'s favorites</string>
    <string name="fullscreen_image">Fullscreen image</string>
    <string name="request_failed">Request failed</string>
    <string name="friend_added">Friend added</string>
    <string name="friend_request_ignored">Friend request ignored</string>
    <string name="deletion_confirmation_of">Do you really want to delete %s ?</string>
    <string name="friend_deleted">Friend deleted</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="already_in_friend_list">User already in friend list</string>
    <string name="gps_disabled">GPS is disabled.</string>
    <string name="added_to_visited">%s added to visited</string>
    <string name="center_map">Center map</string>
    <string name="place_removed">Place removed</string>
    <string name="change_picture">Change the picture</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="no_pictures_yet">No pictures yet. Add some?</string>
    <string name="no_achievements_yet">No achievements yet. Get some?</string>
    <string name="profile_is_private">This profile is private</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="Birthday">Birthday</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="Change">Change</string>
    <string name="save_profile_settings">Save profile settings</string>
    <string name="privacy_updated">Privacy setting updated</string>
    <string name="thats_all">That\'s all.</string>
</resources>