<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:minHeight="300dp"
    android:padding="10dp"
    tools:context="ch.epfl.sweng.fiktion.views.TextSearchActivity">

    <LinearLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:clipToPadding="false"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/search"
            android:onClick="triggerSearch"
            android:padding="7dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/search_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBar"
        tools:ignore="UselessLeaf"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

    </LinearLayout>

    <TextView
        android:id="@+id/noResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_results_found"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="10dp" /> <!-- gets filled dynamically -->

</android.support.constraint.ConstraintLayout>
